--- a/www/common.css
+++ b/www/common.css
@@ -342,3 +342,43 @@ For simplification, search bar is visible on larger screens but is hidden on sma
 /* If you would prefer not to have the social media links, you can remove the comment out slashes and astricks surrounding the content below */
   .footer-social-links { 
 	display: none} 
+	
+	
+.nav > li > a[data-value='Carbon StocksProjected Carbon Storage in California']{
+	background-image: url("stocks_80.png");                     /* <------ */
+    background-repeat:   no-repeat;
+	height:85px;
+	padding-left:90px;
+	padding-top: 30px;
+	background-color: #e7e7e7 !important;
+}
+.nav > li > a[data-value='Net Carbon Fluxes']{
+	background-image: url("fluxes_80.png");                     /* <------ */
+    background-repeat:   no-repeat;
+	height:85px;
+	padding-left:90px;
+	padding-top: 30px;
+	background-color: #e7e7e7 !important;
+	margin-left:25px
+	
+}
+.nav > li > a[data-value='Landcover Totals']{
+	background-image: url("landuse_80.png");                     /* <------ */
+    background-repeat:   no-repeat;
+	height:85px;
+	padding-left:90px;
+	padding-top: 30px;
+	background-color: #e7e7e7 !important;
+	margin-left:25px
+	
+}
+.nav > li > a[data-value='Landcover Transition']{
+	background-image: url("transition_80.png");                     /* <------ */
+    background-repeat:   no-repeat;
+	height:85px;
+	padding-left:90px;
+	padding-top: 30px;
+	background-color: #e7e7e7 !important;
+	margin-left:25px
+	
+}
