--- a/www/common.css
+++ b/www/common.css
@@ -343,9 +343,9 @@ For simplification, search bar is visible on larger screens but is hidden on sma
   .footer-social-links { 
 	display: none} 
 	
-	
+/* 	
 .nav > li > a[data-value='Carbon StocksProjected Carbon Storage in California']{
-	background-image: url("stocks_80.png");                     /* <------ */
+	background-image: url("stocks_80.png");                     
     background-repeat:   no-repeat;
 	height:85px;
 	padding-left:90px;
@@ -354,7 +354,7 @@ For simplification, search bar is visible on larger screens but is hidden on sma
 	box-shadow: 0 1px 3px 0 rgba(0,0,0,.18)
 }
 .nav > li > a[data-value='Net Carbon Fluxes']{
-	background-image: url("fluxes_80.png");                     /* <------ */
+	background-image: url("fluxes_80.png");                     
     background-repeat:   no-repeat;
 	height:85px;
 	padding-left:90px;
@@ -365,7 +365,7 @@ For simplification, search bar is visible on larger screens but is hidden on sma
 	
 }
 .nav > li > a[data-value='Landcover Totals']{
-	background-image: url("landuse_80.png");                     /* <------ */
+	background-image: url("landuse_80.png");                     
     background-repeat:   no-repeat;
 	height:85px;
 	padding-left:90px;
@@ -376,7 +376,7 @@ For simplification, search bar is visible on larger screens but is hidden on sma
 	
 }
 .nav > li > a[data-value='Landcover Transition']{
-	background-image: url("transition_80.png");                     /* <------ */
+	background-image: url("transition_80.png");                     
     background-repeat:   no-repeat;
 	height:85px;
 	padding-left:90px;
@@ -385,7 +385,7 @@ For simplification, search bar is visible on larger screens but is hidden on sma
 	margin-left:25px;
 	box-shadow: 0 1px 3px 0 rgba(0,0,0,.18)
 	
-}
+}*/
 .navbar-default {
     border-color: white !important;
 }
