transition flows added

--- a/www/common.css
+++ b/www/common.css
@@ -349,7 +349,7 @@ For simplification, search bar is visible on larger screens but is hidden on sma
 #navTabset{
 	float:right
 }
-/* 	
+	
 .nav > li > a[data-value='Carbon StocksProjected Carbon Storage in California']{
 	background-image: url("stocks_80.png");                     
     background-repeat:   no-repeat;
@@ -391,7 +391,19 @@ For simplification, search bar is visible on larger screens but is hidden on sma
 	margin-left:25px;
 	box-shadow: 0 1px 3px 0 rgba(0,0,0,.18)
 	
-}*/
+}
+
+.nav > li > a[data-value='Land Use Flows']{
+	background-image: url("transition_80.png");                     
+    background-repeat:   no-repeat;
+	height:85px;
+	padding-left:90px;
+	padding-top: 30px;
+	background-color: #e7e7e7 !important;
+	margin-left:25px;
+	box-shadow: 0 1px 3px 0 rgba(0,0,0,.18)
+	
+}
 .navbar-default {
     border-color: white !important;
 }
