--- a/www/common.css
+++ b/www/common.css
@@ -67,7 +67,7 @@ footer, header, main, nav, div {
 
 hr {
 	width: 100%; 
-	margin-top: 42px;
+	margin-top: 20px;
 	clear: both;
 }
 
@@ -76,7 +76,7 @@ hr {
 }
 @media only screen and (max-width:490px) {
     hr {
-    margin-top: 60px;
+    margin-top: 20px;
     }
 }
 
@@ -481,3 +481,12 @@ section{
 .navbar-default {
     border-color: white !important;
 }
+.dashboard-type{
+	width:275px;
+	margin-bottom:10px;
+}
+#buttomRow{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
