--- a/www/common.css
+++ b/www/common.css
@@ -527,6 +527,24 @@ section{
 .aboutButton {
 	margin-top:10px;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+
+}
+.logoCol{
+	height:200px
+}
+.partnersRow{
+	padding-top:20px;
+	padding-bottom:20px;
+	background-color:#798d8f;
+}
 #buttomRow{
     text-align: center;
     margin-bottom: 20px;
